# smartscan-server

./: .gitignore  LICENSE  README.md  con.py  pyproject.toml
server/: app.py  config.py  constants.py  indexer.py  main.py
