[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartscan_server"
version = "0.1.0"
description = "SmartScan server"
requires-python = ">=3.10"

dependencies = [
    "chromadb==1.3.4",
    "fastapi==0.121.2",
    "python-multipart==0.0.20",
    "smartscan @ git+https://github.com/smartscanapp/smartscan-lib.git@main"
]

[tool.setuptools]
packages = ["server"]
